shrank the topbar to prevent elements being pushed offscreen at 1080p

--- a/styles.css
+++ b/styles.css
@@ -224,6 +224,8 @@ h5 {
   font-family: "Jaldi", sans-serif;
   font-weight: 700;
   font-size: 40px;
+  line-height: 1;
+  height: 68px;
 
 }
 
